--- a/appoinmentControl.Backend.WebApi/appsettings.json
+++ b/appoinmentControl.Backend.WebApi/appsettings.json
@@ -5,7 +5,9 @@
         "User": "MeliTecnicalTest",
         "Password": "o99aRlb5ZXcuR6mfXyrD1g==",
         "BusinessLogic:Patient": "Patient",
-        "BusinessLogic:Medical_Service": "Medical_Service"
+        "BusinessLogic:Medical_Service": "Medical_Service",
+        "BusinessLogic:Appointment_History": "Appointment_History",
+        "BusinessLogic:User": "User"
     },
     "ConnectionStrings": {
         "appointmentControl": "Data Source=localhost;Initial Catalog=AppointmentControl;Persist Security Info=True;User ID=sa;Password=123"
